--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,8 @@
 <div mat-card class="landing-card-container">
-  <div>
-    <button mat-raised-button color="primary" class="login-button">Sign In</button>
+  <div class="action-button">
+    <button (click)="goToSignIn()" mat-raised-button color="primary" class="login-button">Sign In</button>
   </div>
-  <div>
+  <div class="action-button">
     <a mat-raised-button routerLink="/register" class="register-button">Sign Up</a>
   </div>
 </div>
