--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    margin: auto;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
     /*background-image: url('../assets/journal.jpg');*/
 }
