--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -6,3 +6,9 @@
     text-align: center;
     margin: auto;
 }
+
+.form-container {
+    width: 80%;
+    text-align: center;
+    display: inline-block;
+}
