--- a/src/app/journals/journals.component.html
+++ b/src/app/journals/journals.component.html
@@ -7,24 +7,7 @@
 <div class="parent-container">
   <div mat-list role="list">
     <div mat-list-item *ngFor="let journal of (journals | journalList)">
-      <mat-card class="card">
-        <mat-card-header>
-          <div mat-card-avatar class="circular-header">{{journal.firstCharOfTitle}}</div>
-          <mat-card-title>{{journal.title}}</mat-card-title>
-          <mat-card-subtitle>{{journal.createdOn}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://picsum.photos/200/200" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            {{journal.content}}
-          </p>
-        </mat-card-content>
-        <!-- <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions> -->
-      </mat-card>
-
-    </div>&nbsp;
+      <app-journal-card [journal]="journal" (click)="onJournalItemClick(journal.id)"></app-journal-card>&nbsp;
+    </div>
   </div>
 </div>
