Adding link tag for material icons. Also added pipe for displaying User name in Toolbar. Firing event when login has been completed successfully

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-tool-bar></app-tool-bar>
+<app-tool-bar [principal]="_principal"></app-tool-bar>
 <div class="center-container">
     <router-outlet></router-outlet>
 </div>
