--- a/src/app/journal-card/journal-card.component.html
+++ b/src/app/journal-card/journal-card.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="journal">
-  <mat-card class="card">
+<span *ngIf="journal" class="card">
+  <mat-card>
       <span class="author">{{journal.author}}</span>
     <mat-card-header>
       <span mat-card-avatar class="circular-header">{{journal.firstCharOfTitle}}</span>
@@ -19,4 +19,4 @@
       <button mat-button>SHARE</button>
     </mat-card-actions> -->
   </mat-card>
-</div>
+</span>
