--- a/src/app/journals/journals.component.css
+++ b/src/app/journals/journals.component.css
@@ -2,7 +2,7 @@
     text-align: center;
     display: inline-block;
     margin: 0 auto;
-    width: 80%;
+    width: 500px;
 }
 
 .fab-add-journal {
