--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,5 +22,6 @@
         </mat-list-item>
       </mat-list>
     </form>
+    <a mat-flat-button  routerLink="/register" color="default">Don't have an account yet?</a>
   </mat-card>
 </div>
