--- a/src/app/view-journal/view-journal.component.html
+++ b/src/app/view-journal/view-journal.component.html
@@ -1,3 +1,3 @@
-<div class="container" *ngIf="journal">
+<span class="container" *ngIf="journal">
     <app-journal-card [journal]="journal | journal"></app-journal-card>
-</div>
+</span> 
