Adjusting layout width of card: Was overflowing on mobile devices

--- a/src/app/journals/journals.component.css
+++ b/src/app/journals/journals.component.css
@@ -2,7 +2,7 @@
     text-align: center;
     display: inline-block;
     margin: 0 auto;
-    width: 500px;
+    max-width: 400px;
 }
 
 .fab-add-journal {
