Creating different modules and child routes for auth-registration, and Journals

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,6 +3,6 @@
     <button (click)="goToSignIn()" mat-raised-button color="primary" class="login-button">Sign In</button>
   </div>
   <div class="action-button">
-    <a mat-raised-button routerLink="/register" class="register-button">Sign Up</a>
+    <a mat-raised-button routerLink="/user/register" class="register-button">Sign Up</a>
   </div>
 </div>
