--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <h1>404</h1>
 
 <div>
-  <p> Oops... We couldn't find the page you requested. click <a routerLink="/landing"><b>here</b></a> to navigate to the home page. </p>
+  <p> Oops... We couldn't find the page you requested. Click <a routerLink="/landing"><b>here</b></a> to navigate to the home page. </p>
 </div>
