--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -48,7 +48,7 @@
       </mat-list-item>
     </mat-list>
   </form>
-  <a mat-flat-button  routerLink="/login" color="default">Already have an account?</a>
+  <a mat-flat-button  routerLink="/user/login" color="default">Already have an account?</a>
 
 </mat-card>
 </div>
