Adding @Output functionality demonstrated through UI message showing if Journal was composed by currentlly logged in user

--- a/src/app/journal/view-journal/view-journal.component.html
+++ b/src/app/journal/view-journal/view-journal.component.html
@@ -1,3 +1,5 @@
 <span class="container" *ngIf="journal">
-    <app-journal-card [journal]="journal | journal"></app-journal-card>
+    {{_composedByMeMessage}}
+    <br/>
+    <app-journal-card [journal]="journal | journal" (isComposedByMe)="onComposedByMeCheck($event)"></app-journal-card>
 </span> 
